box-sizing: border-box; & -webkit-scrollbar & bug
/* scrollbar & must be set this!*/

.h5-dnd-body-container::-webkit-scrollbar {
    box-sizing: border-box;
}

--- a/HTML5-Drag-Drop/F9-v2.0.0-modules/fast-preview/css/black-skin/common/scrollbar.css
+++ b/HTML5-Drag-Drop/F9-v2.0.0-modules/fast-preview/css/black-skin/common/scrollbar.css
@@ -3,6 +3,13 @@
 /* @import url("./scrollbar.css"); */
 
 
+/* scrollbar & must be set this!*/
+
+.h5-dnd-body-container::-webkit-scrollbar {
+    box-sizing: border-box;
+}
+
+
 /* vertical & decrement */
 
 .h5-dnd-body-container::-webkit-scrollbar-button:vertical:decrement {
